k8s-helm/ecommerce-app/templates/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: ecommerce-ingress

  annotations:
    kubernetes.io/ingress.class: alb

spec:
  rules:
    - http:
        paths:
          - path: /

            pathType: Prefix

            backend:
              service:
                name: frontend

                port:
                  number: 80
